--- a/MVVM/MainWindow.xaml
+++ b/MVVM/MainWindow.xaml
@@ -20,7 +20,7 @@
             
                 <local:VisibilityConvert x:Key="VisibilityConvert"/>
                 <local:EnableButtonConvert x:Key="EnableButtonConvert"/>
-                 <!--<local:WoterMarkConvert x:Key="WoterMarkConvert" />-->
+           
 
         </ResourceDictionary>
   
@@ -46,23 +46,41 @@
         </Grid.RowDefinitions>
 
         <Label  Content="Імена" FontSize="15" FontWeight="Bold" HorizontalAlignment="Center"  VerticalAlignment="Center"/>
-        <Border Grid.Row="3" BorderBrush="Black" BorderThickness="1">
-            <TextBox  Text="{Binding Pattern, UpdateSourceTrigger=PropertyChanged}"   FontSize="15" Width="140" Height="25" HorizontalAlignment="Center" 
-VerticalAlignment="Top" Background ="AliceBlue" /> <!--Style="{StaticResource WoterMarkConvert}"-->
-        </Border>
+      
+            <Border  Grid.Row="3" VerticalAlignment="Top" BorderBrush="Black" BorderThickness="1" >
+                <Grid  VerticalAlignment="Top" >
+               
+                <TextBox Grid.Row="3" x:Name="Work" Text="{Binding Pattern, UpdateSourceTrigger=PropertyChanged}"  Width="140"  Height="25"  FontSize="15" HorizontalAlignment="Center"  VerticalAlignment="Top" Background ="AliceBlue" BorderBrush="Azure"    />
+                <TextBlock Text="Введіть Ім'я або вік"  Foreground="Black" Opacity="0.5" FontSize="14" Margin="10,2" IsHitTestVisible="False">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Style.Triggers>
+                                <DataTrigger  Binding="{Binding Text,ElementName= Work}" Value="">
+                                    <Setter Property="Visibility" Value="Visible"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                            <Setter Property="Visibility" Value="Hidden"/>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+            </Grid>
+            </Border>
+        
+       
         <ListBox  Grid.Column="0" Grid.Row="3" ItemsSource="{Binding SearchList}"  SelectedItem="{Binding SelectedPerson}"     Margin="0,25,0,25" >
-           
-            <ListBox.ItemTemplate>
+
+            <ListBox.ItemTemplate >
                 
-                <DataTemplate>
-                    
-                    <TextBlock >
+                <DataTemplate >
+
+                    <TextBlock x:Name="TextBlocks"  Tag="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}">
                          
-                       <Button Content="X" Width="15"  Height="15" FontSize="9" HorizontalAlignment="Right" Margin="120,0,0,0" Command="{Binding DataContext.DeleteCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" />  
-                       <LineBreak/>
-                        <Run Text="{Binding PersonName,UpdateSourceTrigger=PropertyChanged}" FontSize="18"/> 
-                        
-                        <LineBreak/>  <!-- Style="{StaticResource ButtonStyle}"  IsEnabled="{Binding EnableButtonClear,UpdateSourceTrigger=PropertyChanged ,  Converter={StaticResource EnableButtonConvert}}"-->
+                       
+                       
+                        <Run Text="{Binding PersonName,UpdateSourceTrigger=PropertyChanged}" FontSize="18" /> 
+                        <LineBreak/>
+                        <Button Content="X" Width="15"  Height="15" FontSize="9" HorizontalAlignment="Right" Margin="120,0,0,0" Command="{Binding DataContext.DeleteCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" />  
+                        <LineBreak/> 
                         <Run Text="Вік: " FontSize="12"/>
                         <Run Text="{Binding Age}" FontSize="12"/> 
                         
@@ -70,19 +88,24 @@ VerticalAlignment="Top" Background ="AliceBlue" /> <!--Style="{StaticResource Wo
                         <Run Text="Посада: " FontSize="12"/>
                         <Run Text="{Binding Post,  UpdateSourceTrigger=PropertyChanged}"  FontSize="10"/>
                       
+                   
+                    <TextBlock.ContextMenu>
+                                <ContextMenu >
+                                <MenuItem Header="Видалити"  Command="{Binding PlacementTarget.Tag.DataContext.DeleteCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}"  />
+                                </ContextMenu>
+                        </TextBlock.ContextMenu>
                     </TextBlock>
-                    
-                  </DataTemplate>
+                </DataTemplate>
                 
             </ListBox.ItemTemplate>
             
         </ListBox>
-     
+         
         <Button Grid.Row="1" Name="Add" Content="Додати"  Style="{StaticResource ButtonStyle}" Command="{Binding AddCommand}"  />
 
         <Button Grid.Row="2" Name="Clear" Content="Очистити все"  Style="{StaticResource ButtonStyle}" Command="{Binding ClearAllCommand}" IsEnabled="{Binding EnableButtonClear,UpdateSourceTrigger=PropertyChanged ,  Converter={StaticResource EnableButtonConvert}}" />
-     
-        <Grid Name="Info" Grid.Column="1" Grid.Row="0" Grid.RowSpan="6" Visibility="{Binding VisibilityConverts, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource VisibilityConvert}}"  Grid.ColumnSpan="2">
+
+        <Grid Name="Info" Grid.Column="1" Grid.Row="0" Grid.RowSpan="6" Visibility="{Binding VisibilityConverts, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource VisibilityConvert}}"  Grid.ColumnSpan="2"><!--  Добавить проверку интов логическую    -->
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="230" />
 
@@ -109,21 +132,33 @@ VerticalAlignment="Top" Background ="AliceBlue" /> <!--Style="{StaticResource Wo
 
 
 
-            <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Name="Img" Source="{Binding PhotoProf, UpdateSourceTrigger=PropertyChanged}"  Width="200" Height="200"  VerticalAlignment="Top" Margin="0,5,0,0"/>
+            <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Name="Img" Source="{Binding PhotoProf, UpdateSourceTrigger=PropertyChanged}"  Width="200" Height="200"  VerticalAlignment="Top" Margin="0,0,0,0"/>
+            <Grid Grid.Column="2" Grid.Row="0" Grid.RowSpan="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
 
-            <Label Grid.Column="2" Grid.Row="2"  Content="Ім'я:" FontSize="15" FontWeight="Bold"  Margin="0,5,10,10" VerticalAlignment="Top" />
-            <Label Grid.Column="2" Grid.Row="3"  Content="Вік:" FontSize="15" FontWeight="Bold" Margin="0,5,10,10" VerticalAlignment="Top" />
-            <Label Grid.Column="2" Grid.Row="4"  Content="Посада:" FontSize="15" FontWeight="Bold" Margin="0,5,10,10"  VerticalAlignment="Top" />
-            <Label Grid.Column="2" Grid.Row="5"  Content="Відпустка:" FontSize="15" FontWeight="Bold" Margin="0,0,10,10"  VerticalAlignment="Top" />
+
+                <Label Grid.Column="0" Grid.Row="0"  Content="Ім'я:" FontSize="15" FontWeight="Bold"  Margin="0,5,10,10" VerticalAlignment="Top" />
+            <Label Grid.Column="0" Grid.Row="1"  Content="Вік:" FontSize="15" FontWeight="Bold" Margin="0,5,10,10" VerticalAlignment="Top" />
+            <Label Grid.Column="0" Grid.Row="2"  Content="Посада:" FontSize="15" FontWeight="Bold" Margin="0,5,10,10"  VerticalAlignment="Top" />
+            <Label Grid.Column="0" Grid.Row="3"  Content="Відпустка:" FontSize="15" FontWeight="Bold" Margin="0,0,10,10"  VerticalAlignment="Top" />
+            
+
+            <TextBox  Grid.Column="1" Grid.Row="0" Name="NameBox" Text="{Binding Names }"  Width="100" Height="30" Margin="0,0,10,10" FontSize="15" />
+            <TextBox  Grid.Column="1" Grid.Row="1" Name="AgeBox"  Text="{Binding Age}" Width="100" Height="30" Margin="0,0,10,10"  FontSize="15" />
 
 
-            <TextBox  Grid.Column="3" Grid.Row="2" Name="NameBox" Text="{Binding Names }"  Width="100" Height="30" Margin="0,0,10,10" FontSize="15" />
-            <TextBox  Grid.Column="3" Grid.Row="3" Name="AgeBox"  Text="{Binding Age}" Width="100" Height="30" Margin="0,0,10,10"  FontSize="15" />
-
-
-            <ComboBox Grid.Column="3" Grid.Row="4" Name="PostBox" Width="auto" Margin="0,0,10,10" Height="30" ItemsSource="{Binding Source={local:ConvertEnum {x:Type local:EnumPost}}, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding Post}" IsReadOnly="True" />
-            <ComboBox Grid.Column="3" Grid.Row="5" Name="WikendBox"  Width="auto" MaxWidth="150" Margin="0,0,10,10" ItemsSource="{Binding Source={local:ConvertEnum {x:Type local:EnumWeekend}}, UpdateSourceTrigger=PropertyChanged}"   SelectedItem="{Binding Weekend}" Height="30" IsReadOnly="True" VerticalAlignment="Top"/>
-
+            <ComboBox Grid.Column="1" Grid.Row="2" Name="PostBox" Width="auto" Margin="0,0,10,10" Height="30" ItemsSource="{Binding Source={local:ConvertEnum {x:Type local:EnumPost}}, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding Post}" IsReadOnly="True" />
+            <ComboBox Grid.Column="1" Grid.Row="3" Name="WikendBox"  Width="auto" MaxWidth="150" Margin="0,0,10,10" ItemsSource="{Binding Source={local:ConvertEnum {x:Type local:EnumWeekend}}, UpdateSourceTrigger=PropertyChanged}"   SelectedItem="{Binding Weekend}" Height="30" IsReadOnly="True" VerticalAlignment="Top"/>
+            </Grid>
             <Button Grid.Column="0"  Grid.Row="2" Name="EditPhoto" Content="Змінити Фото" Width=" 100 " Height=" 30" Margin="5"   FontWeight="Medium"   Command="{Binding UpdetePhotoProf}"  />
             <Grid Grid.Row="0" Grid.Column="4" Grid.RowSpan="7">
                 <Grid.RowDefinitions>
