--- a/MVVM/Styles/TextBoxWotermarc.xaml
+++ b/MVVM/Styles/TextBoxWotermarc.xaml
@@ -1,32 +1,45 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="WoterMarkConvert" TargetType="TextBox">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="TextBox">
-                    <Grid>
 
-                        <TextBlock Text="Введіть Ім'я або вік"
-                               Foreground="Black"
-                               Margin="5,0,0,0"
-                               
-                               Visibility="Collapsed"
-                               x:Name="Texts"
-                               Width="140" 
-                               Height="25"
-                               HorizontalAlignment="Center" 
-                               VerticalAlignment="Top" 
-                               Background ="AliceBlue"
-                               Opacity="0.5"
-                                />
-                    </Grid>
-                    <ControlTemplate.Triggers>
+    <!--<Style x:Key="WoterMarkConvert" TargetType="TextBlock" >
+
+        --><!--<Setter Property="Text" Value="123123"  />
+        <Setter Property="Foreground" Value="Black"  />
+        <Setter Property="Opacity" Value="0.5"  />
+        <Setter Property="FontSize" Value="15"  />
+        <Setter Property="Margin" Value="10,0"  />
+        <Setter Property="Visibility" Value="Hidden"/>
+
+        <Style.Triggers>
+                    <DataTrigger  Binding="{Binding Text , ElementName= WorkZon}" Value="">
+                        <Setter Property="Visibility" Value="Visible"/>
+                    </DataTrigger>
+                </Style.Triggers>
+               
+            </Style>-->
+
+
+
+
+
+
+        <!--<Setter Property="Text" Value="Введіть Ім'я або вік"/>
+        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="Width" Value="140"/>
+        <Setter Property="Visibility" Value="Visible"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="Background" Value="AliceBlue"/>
+        <Setter Property="Opacity" Value="0.5"/>
+                    <Style.Triggers>
                         <Trigger Property="Text" Value="">
-                            <Setter TargetName="Texts" Property="Visibility" Value="Visible"/>
+                            <Setter  Property="Opacity" Value="1"/>
+                          
+
                         </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
+                    </Style.Triggers>--><!--
+
+
+
+    </Style>-->
 </ResourceDictionary>
